Modificación imagen Banner

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -13,7 +13,7 @@ h1{
 }
 
 header {
-    background-image: url(../design1_image2.jpg);
+    background-image: url(../img/design1_image2.jpg);
     height: 500px;
     display: block;
     align-items: end;
