--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -15,7 +15,7 @@ h1{
 }
 
 header {
-    background-image: url(/assets/img/design1_image2.jpg);
+    background-image: url(../img/design1_image2.jpg);
     background-size:cover;
     background-repeat: no-repeat;
     height: 500px;
